jar包添加环境变量配置